--- a/tp1/hmin317-tp1-master/textures.qrc
+++ b/tp1/hmin317-tp1-master/textures.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>cube.png</file>
         <file>heightMap.png</file>
+        <file>degrade.png</file>
     </qresource>
 </RCC>
